# industrial-assistant-frontdevice

./: .gitignore  CLAUDE.md  LLM接口文档.md  PHASE2_SUMMARY.md  README.md  launcher.ps1  requirements-device.txt  requirements-portable.txt  requirements.txt  setup.py  start_volcano_llm.ps1  unified-voice-ws-protocol.md  voice-test-standalone.html  wakefusion_wake_module_plan_v2.md  客户端使用手册.md  训练模型操作手册.md  运行操作.md  链路测试手册.md  链路说明手册.md
MP3/: record_xvf.py
archive_old/: asr_service.py  tts_service.py
cli/: train.py
config/: config.yaml  config_chinese.yaml  config_sherpa.yaml  config_test.yaml
docs/: CAMERA_TEST_REPORT.md  KWS_COMPARISON.md  MATCHBOXNET_INTEGRATION.md  PRODUCING.md  SHERPA_ONNX_GUIDE.md  SHERPA_QUICK_REF.md  TRAINING_CHINESE_KWS.md  VISION_PLAN.md  VOICE_PLAN.md  backend-protocol.md
examples/mock-backend/: README.md  package.json  server.js
lib/orbbec/: pyorbbecsdk.cp310-win_amd64.pyd
scripts/: download_sherpa_model.py
tests/: Mock LLM.html  debug_lip_sync.py  list_audio_devices.py  mock_llm_agent_simple.py  mock_llm_server.py  simple_vision_pub.py  test_asr_websocket_client.html  test_audio_client.html  test_compare_models.py  test_core_audio_e2e.py  test_device_audio_playback.py  test_device_wake_push.py  test_tts_websocket_client.html  test_vision.py  test_vision_gui.py  test_ws_audio_saver.py  test_ws_client.html  test_xiaokang_nemo.py  test_xiaokang_oww.py
training/: finetune_xvf3800.py  mega_dataset_generator.py  negative_slicer.py  nemo_train.py  oww_prepare_features.py  oww_train.py  positive_data_factory.py  split_dataset.py  tts_hard_negative_generator.py  tts_negative_generator.py  tts_positive_generator.py  xvf3800_collector.py
wakefusion/: __init__.py  config.py  logging.py  metrics.py  runtime.py  types.py
wakefusion/decision/: __init__.py  decision_engine.py
wakefusion/drivers/: __init__.py  (+2 more)
wakefusion_web/: index.html  package-lock.json  package.json
wakefusion_web/src-tauri/: Cargo.toml  host-config.json  start-release.bat  tauri.conf.json
wakefusion_web/src-tauri/src/: audio_handler.rs  audio_playback.rs  commands.rs  config.rs  device_ws_server.rs  events.rs  lib.rs  main.rs  message_router.rs  mjpeg_server.rs  unity_ws_server.rs  ws_client.rs  ws_protocol.rs
wakefusion_web/src-tauri/src/media/: camera_capture_runtime.rs  camera_device_manager.rs  camera_profile.rs  mod.rs
wakefusion_web/src-tauri/test-dist/: index.html
(+78 files in other folders)
