[package]
name = "wakefusion-terminal-host"
version = "0.1.0"
description = "WakeFusion terminal host"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "wakefusion_terminal_host_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.5", features = [] }
