[package]
name = "wakefusion-terminal-host"
version = "0.1.0"
description = "WakeFusion unified device host"
authors = ["WakeFusion"]
edition = "2021"

[lib]
name = "wakefusion_terminal_host_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2.2.5", features = [] }
tokio = { version = "1", features = ["full"] }
tungstenite = "0.26"
futures-util = "0.3"
cpal = "0.15"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
crossbeam-channel = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Media device runtime — USB UVC 摄像头采集（Windows Media Foundation 后端，自动协商 NV12/MJPG）
# 选型依据：docs/wakefusion-media-device-architecture.md § 5.1
nokhwa = { version = "0.10", default-features = false, features = ["input-msmf", "output-threaded"] }
